// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Marker should render multiple marker 1`] = `
<div
  className="css-1naiqne-Marker"
>
  <div
    className="css-11hdqe0-MarkerUnit"
    onClick={[Function]}
  >
    <span
      className="css-twv3ha-MarkerUnit"
    >
      1
    </span>
  </div>
  <div
    className="css-5mf5wp-MarkerUnit"
    onClick={[Function]}
  >
    <span
      className="css-twv3ha-MarkerUnit"
    >
      2
    </span>
  </div>
  <div
    className="css-1yafj3t-MarkerUnit"
    onClick={[Function]}
  >
    <span
      className="css-twv3ha-MarkerUnit"
    >
      3
    </span>
  </div>
  <div
    className="css-1qhu3xl-MarkerUnit"
    onClick={[Function]}
  >
    <span
      className="css-twv3ha-MarkerUnit"
    >
      4
    </span>
  </div>
</div>
`;

exports[`Marker should render with default props 1`] = `
<div
  className="css-1naiqne-Marker"
>
  <div
    className="css-11hdqe0-MarkerUnit"
    onClick={[Function]}
  >
    <span
      className="css-twv3ha-MarkerUnit"
    >
      1
    </span>
  </div>
</div>
`;
